// These are the messages that get persisted - the events, plus the current state (Home) for snapshots.
syntax = "proto3";

package com.example.sm.persistence;

option go_package = "persistence";

message Session {
    string device_id = 1;
    string sessionId = 2;
    int64 expiration = 3;
}

message SessionCreated {
    Session session = 1;
}

message SessionRenewed {
    string expiredSessionId = 1;
    Session newSession = 2;
}

message SessionTearedDown {
    string sessionId = 1;
}

message SessionExpired {
    string sessionId = 1;
}

message MaxSessionSet {
    int32 nbActiveSessions = 1;
}


message Home {
    repeated Session sessions = 1;
    int32 nbActiveSessions = 2;
}

